# CopperTree

./: .env.example  .gitignore  DECISION_JOURNAL.md  Dockerfile  README.md  REPRODUCE.md  TODO.md  WRITEUP.md  docker-compose.yml  evolution_report.html  judge.sh  main.py  pyproject.toml  pyrightconfig.json  reproduce.sh
data/scenarios/: borrower_profiles.json
prompts/shared/: compliance_block.txt
prompts/v1/: assessment.txt  final_notice.txt  resolution.txt
scripts/: bootstrap_decision_journal.py  cost_breakdown.py  docker_eval_entrypoint.sh  generate_evolution_report.py  run_eval.py  run_live.py  seed_db.py  snapshot_config.py  test_agent1.py  test_azure_voice.py  test_live_call.py
src/: config.py  worker.py
src/agents/: assessment.py  base.py  final_notice.py  resolution.py  simulator.py  terminal_io.py
src/compliance/: checker.py  pii_redactor.py
src/evaluation/: judge.py  meta_eval.py  metrics.py  reporter.py  runner.py
src/handoff/: summarizer.py  token_budget.py
src/learning/: journal.py  loop.py  proposer.py  stats.py
src/llm/: anthropic_client.py  client.py  cost_tracker.py  utils.py
src/models/: case_file.py  handoff.py  prompts.py
src/storage/: mongo.py  prompt_registry.py
src/voice/: azure_voice_client.py  retell_client.py  webhook.py
src/workflows/: activities.py  collections.py
tests/: test_compliance_checker.py  test_llm_utils.py  test_prompt_registry.py  test_token_budget.py
